<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.code.codemercenaries.girdthysword.AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/round_logo_desc"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:srcCompat="@mipmap/ic_sword_dark_round" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/girdthyswordapp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/joel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/joel_kingsley_details"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/karthi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/joel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/karthikeyan_details"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/murali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/karthi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/murali_krishna_details"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/rate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/murali"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/rate_our_app" />

        <Button
            android:id="@+id/report"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/report_a_bug" />

        <Button
            android:id="@+id/feedback"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/report"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/send_us_feedback" />

        <TextView
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedback"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="GirdThySword is available as open source software on GitHub"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/source"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/open"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Source Code" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Version 1.0 (Beta)"
            android:textAlignment="center"
            android:textSize="15sp" />

    </RelativeLayout>
</ScrollView>

