<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.code.codemercenaries.girdthysword.ProfileActivity"
    tools:showIn="@layout/app_bar_profile">

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/log_out"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="446dp" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/joel_kingsley"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/my_email"
        android:textSize="18sp" />
</RelativeLayout>
