<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.code.codemercenaries.girdthysword.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/title_activity_home"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="83dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="auto"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="auto"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:background="@color/colorSword"
            android:orientation="horizontal"></LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="end|center_vertical"
                android:text="@string/delete_section"
                android:visibility="visible"
                app:layout_anchorGravity="bottom|right" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_delete"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="25dp"
                android:fadingEdge="vertical"
                android:fontFamily="sans-serif-condensed"
                android:gravity="end|center_vertical"
                android:text="@string/add_section"
                android:visibility="visible"
                app:layout_anchorGravity="bottom|right" />
        </RelativeLayout>
    </FrameLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_home" />

</android.support.design.widget.CoordinatorLayout>
